--- a/static/style.css
+++ b/static/style.css
@@ -36,14 +36,14 @@ h1, h2, h3, h4 {
   line-height: 2.5rem;
 }
 h1 {
-  font-size: 3.5rem;
+  font-size: 4rem;
 }
 h2 {
   font-size: 3rem;
 }
 
 h1.main-title {
-  font-size: 5rem;
+  font-size: 5.5em;
   padding-top: 2rem;
   padding-bottom: 12px;
   line-height: 3.5rem;
@@ -73,6 +73,40 @@ b {
 
 img.border {
   border-radius: 0.75rem;
+}
+
+body {
+  position: relative;
+}
+
+body:after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  z-index: -1;
+  left: -00%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  opacity: 0.12;
+  background-image: url('../imgs/bg.png');
+  /* background-size: 100%; */
+  background-repeat: repeat-y;
+  /* background-position: 50% 0; */
+  background-size: min(200%, 1600px);
+  background-attachment:local;
+  background-position: center 0;
+}
+
+.container {
+  position: relative;
+}
+
+img.bg-img {
+  position: absolute;
+  z-index: -1;
+  opacity: 20%;
+  width: 90%;
 }
 
 div {
